Add interpolation methods for LUTs and formulas in color management documentation

--- a/11.1_Formulas.md
+++ b/11.1_Formulas.md
@@ -121,6 +121,28 @@ Where:
 *   `Y` is the normalized code value.
 *   `γ`, `a`, `b`, and `c` are constants defined in the ARIB STD-B67 standard.
 
+## Interpolation Methods
+
+### Interpolacja trójliniowa (Trilinear Interpolation)
+```
+C_out = (1 - x)(1 - y)(1 - z)C_000 + 
+        x(1 - y)(1 - z)C_100 + 
+        (1 - x)y(1 - z)C_010 + 
+        xy(1 - z)C_110 + 
+        (1 - x)(1 - y)zC_001 + 
+        x(1 - y)zC_101 + 
+        (1 - x)yzC_011 + 
+        xyzC_111
+```
+
+### Interpolacja tetrahedralna (Tetrahedral Interpolation)
+```
+C_out = ∑(w_i * C_i)
+gdzie:
+w_i = objętość pod-tetraedru przeciwna do wierzchołka i
+C_i = wartość koloru w wierzchołku i
+```
+
 **Important Notes:**
 
 *   These formulas are simplified representations for illustrative purposes. The exact formulas used in practice are often more complex and may be proprietary to camera manufacturers or standards organizations.
