--- a/4.3_Color_Management_Pipelines_LUTs.md
+++ b/4.3_Color_Management_Pipelines_LUTs.md
@@ -41,4 +41,12 @@ While ACES and DaVinci Resolve are two prominent examples, other color managemen
 *   **Avoid Double-Applying LUTs:**  Be careful not to double-apply LUTs, which can lead to unintended color shifts and artifacts.
 * **Monitor Calibration:** Accurate monitor calibration is essential for any color-managed workflow.
 
+### LUT Interpolation Methods
+The choice of interpolation method significantly impacts the accuracy and performance of 3D LUT applications:
+
+- **Trilinear Interpolation:** Fast but less accurate, using linear interpolation between adjacent cube vertices. Suitable for real-time applications where slight inaccuracies are acceptable.
+- **Tetrahedral Interpolation:** More computationally intensive but provides higher accuracy by dividing the color cube into tetrahedrons and interpolating within each. Preferred for critical color grading and film mastering.
+
+Refer to [Formulas](11.1_Formulas.md) for mathematical details of both methods.
+
 By understanding how LUTs function within color management pipelines, you can ensure color accuracy and consistency throughout your projects, from capture to delivery.
